031207 uploaded matching C62127.patch and fclose.patch (CK)
031207 applied tidying.patch to remove unused code and
       standardize some temp_var operands. (CK)
031206 C62127.patch applied (CK)
031201 dup_incl.patch applied (MC), prints warning for duplicate includes
031201 C62102.patch applied (DK)
031130 applied s29b.patch to refine unqualified property detection (CK)
031130 applied s11b.patch (fixes z-code out-of-bounds messages and
       also longest possible '...' string) (CK)
031130 applied msvc.patch in aid of ANSI & MSVC compatibility (CK)
031130 opcode_pop.patch applied (DK)
031129 applied max_include.patch (MC)
031129 applied s15.patch (warning for type mismatch of ->/-->) (?) (CK)
031129 applied s29.patch (warning for unqualified property) (?) (CK)
031129 applied s33.patch (warning for non-words in name property) (CK)
031129 applied s11.patch (Array name buffer) (CK)
031125 create_params.patch applied (DK)
031124 C62113.patch applied (DK)
031124 rterr_size.patch applied (DK)
031123 stack_args.patch applied (DK)
031123 rterr_19.patch applied (DK)
031122 gg_statusline_flag renamed to sys_statusline_flag
       (sys_statusline.patch) (CK)
031114 C62111.patch applied (bi-platform tested) (CK)
031111 C62124.patch applied (DK)
031111 switch_W.patch and cs_map.patch applied (DK)
031109 Applied C62103tilde.patch which also makes '~//'=='"//' for Glulx
       and Zcode (CK)
031109 Applied C62123etc.patch which also adds gg_statusline_flag (CK)
031021 header_ext.patch and tilde.patch applied (DK)
031018 S37comp.patch (tentative (A) implementation) applied (CK)
031018 G03701.patch (jump optimization) from inform-fiction applied
031018 inform-icl-header-patch.txt from AP applied
031018 charset.patch from DK applied
031013 switch_G.patch applied (DK)
031010 glulx-characcent-patch.txt and glulx-maxstrings-patch.txt from AP
       applied
031008 ifarchive.patch and opcodes.patch applied (DK)
031007 glulx-accent-patch.txt from AP applied