@@ -165,6 +165,7 @@ int MAX_CLASSES;
 int MAX_CLASS_TABLE_SIZE;
 int32 MAX_LINK_DATA_SIZE;
 int MAX_INCLUSION_DEPTH;
+int MAX_SOURCE_FILES;
 int32 MAX_INDIV_PROP_TABLE_SIZE;
 int32 MAX_OBJ_PROP_TABLE_SIZE;
 int MAX_OBJ_PROP_COUNT;
@@ -220,6 +221,7 @@ static void list_memory_sizes(void)
         MAX_OBJ_PROP_TABLE_SIZE);
     printf("|  %25s = %-7d |\n","MAX_PROP_TABLE_SIZE",MAX_PROP_TABLE_SIZE);
     printf("|  %25s = %-7d |\n","MAX_QTEXT_SIZE",MAX_QTEXT_SIZE);
+    printf("|  %25s = %-7d |\n","MAX_SOURCE_FILES",MAX_SOURCE_FILES);
     printf("|  %25s = %-7d |\n","MAX_SYMBOLS",MAX_SYMBOLS);
     printf("|  %25s = %-7d |\n","MAX_STATIC_DATA",MAX_STATIC_DATA);
     printf("|  %25s = %-7ld |\n","MAX_STATIC_STRINGS",
@@ -382,6 +384,7 @@ extern void set_memory_sizes(int size_flag)
     }
 
     /* Regardless of size_flag... */
+    MAX_SOURCE_FILES = 256;
     MAX_INCLUSION_DEPTH = 5;
     MAX_LOCAL_VARIABLES_z = 16;
     MAX_LOCAL_VARIABLES_g = 32;
@@ -599,6 +602,12 @@ static void explain_parameter(char *command)
 "  MAX_INCLUSION_DEPTH is the number of nested includes permitted.\n");
         return;
     }
+    if (strcmp(command,"MAX_SOURCE_FILES")==0)
+    {   printf(
+"  MAX_SOURCE_FILES is the number of source files that can be read in the \n\
+  compilation.\n");
+        return;
+    }
     if (strcmp(command,"MAX_INDIV_PROP_TABLE_SIZE")==0)
     {   printf(
 "  MAX_INDIV_PROP_TABLE_SIZE is the number of bytes allocated to hold the \n\
@@ -754,6 +763,8 @@ extern void memory_command(char *command)
                 MAX_CLASS_TABLE_SIZE=j, flag=1;
             if (strcmp(command,"MAX_INCLUSION_DEPTH")==0)
                 MAX_INCLUSION_DEPTH=j, flag=1;
+            if (strcmp(command,"MAX_SOURCE_FILES")==0)
+                MAX_SOURCE_FILES=j, flag=1;
             if (strcmp(command,"MAX_INDIV_PROP_TABLE_SIZE")==0)
                 MAX_INDIV_PROP_TABLE_SIZE=j, flag=1;
             if (strcmp(command,"MAX_OBJ_PROP_TABLE_SIZE")==0)
